# gtknode

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  configure.ac  rebar  rebar.config
c_src/: Makefile.am  gtknode.c  gtknode.h  gtknode_cnode.c  gtknode_gen.c  gtknode_glade.c  gtknode_internal.c  gtknode_marshal.c  gtknode_structs.c
doc/: Makefile.am
priv/: Makefile  Makefile.am  get_erl_root.es
priv/c_src/: gtknode.h  gtknode_gen.c  gtknode_internal.c  gtknode_marshal.c
priv/examples/: Makefile  Makefile.am  README  clipboard.txt
priv/examples/hello/: Makefile  Makefile.am  hello.erl
priv/examples/hello_world/: Makefile  Makefile.am  hello_world.erl  hello_world.glade  hello_world.gladep
priv/examples/points/: Makefile  Makefile.am  points.erl
priv/examples/sherk/: Makefile.am  sherk.erl  sherk.glade  sherk.glade.bak  sherk_aquire.erl  sherk_list.erl  sherk_prof.erl  sherk_scan.erl  sherk_tab.erl  sherk_target.erl  sherk_tree.erl
priv/examples/top/: Makefile.am  top.erl  top.glade  top.gladep  top_top.erl
priv/examples/treeview/: Makefile.am  treeview.erl  treeview.glade  treeview.gladep
priv/generator/: Makefile  Makefile.am  g_white.txt  gdk_black.txt  gdk_predefined.defs  gdk_white.txt  generate.sh  generator.erl  gtk_predefined.defs  gtk_white.txt
src/: Makefile.am  generator.erl  gtknode.app.src  gtknode.erl
